implement contact section

--- a/practice-one/src/index.html
+++ b/practice-one/src/index.html
@@ -104,6 +104,15 @@
           </div>
         </div>
       </section>
+      <section class="section-top-contact">
+        <div class="wrapper">
+          <h2 class="title-common-primary">Bize Ulaşın</h2>
+          <p class="detail-common-primary">Çözüm, hizmet ve ürünlerimiz hakkında detaylı bilgi için bizimle irtibata geçin.</p>
+          <a href="javascript:void(0)" class="button-common-primary">
+            <span class="button-wrapper">Bize Ulaşın</span>
+          </a>
+        </div>
+      </section>
     </main>
     <include src="./components/footer.html"></include>
   </div>
