fix button error

--- a/practice-one/src/index.html
+++ b/practice-one/src/index.html
@@ -27,7 +27,7 @@
                 class="is-mobile">hizmetleri sunmaktayız.</p>
             <form action="POST" class="keyvisual-register">
               <input type="email" class="register-input" placeholder="Mail bültenimize kayıt ol">
-              <button type="submit" class="button-common-primary">
+              <button type="submit" onclick="alert('This feature is in development')" class="button-common-primary">
                 <span class="button-wrapper">Kayıt Ol</span>
               </button>
             </form>
