hide items manage list for sp view

--- a/practice-one/src/index.html
+++ b/practice-one/src/index.html
@@ -88,10 +88,10 @@
                 </a>
               </div>
             </div>
-            <div class="company-item">
+            <div class="company-item is-desktop">
               <each loop="item in [{'logo': './assets/images/logo_top_reference_07.png.webp', 'textAlt': 'aktaş'}, {'logo': './assets/images/logo_top_reference_08.png.webp', 'textAlt': 'OLA'}]"><include src="./components/company-item.html" locals='{{item}}'></include></each>
             </div>
-            <div class="company-item">
+            <div class="company-item is-desktop">
               <each loop="item in [{'logo': './assets/images/logo_top_reference_09.png.webp', 'textAlt': 'amazon'}]"><include src="./components/company-item.html" locals='{{item}}'></include></each>
             </div>
           </div>
