--- a/practice-one/src/index.html
+++ b/practice-one/src/index.html
@@ -76,7 +76,11 @@
               <each loop="item in [{'logo': './assets/images/logo_top_reference_01.png.webp', 'textAlt': 'BORUSAN'}]"><include src="./components/company-item.html" locals='{{item}}'></include></each>
             </div>
             <div class="company-item">
-              <each loop="item in [{'logo': './assets/images/logo_top_reference_02.png.webp', 'textAlt': 'İstanbul Bilgi Üniversitesi LAUREATE INTERNATIONAL UNIVERSITIES'}, {'logo': './assets/images/logo_top_reference_03.png.webp', 'textAlt': 'book my show'}]"><include src="./components/company-item.html" locals='{{item}}'></include></each>
+              <each loop="item in [{'logo': './assets/images/logo_top_reference_02.png.webp', 'textAlt': 'İstanbul Bilgi Üniversitesi LAUREATE INTERNATIONAL UNIVERSITIES'}, {'logo': './assets/images/logo_top_reference_03.png.webp', 'textAlt': 'book my show'}]">
+                <include src="./components/company-item.html">
+                  {{item}}
+                </include>
+              </each>
             </div>
             <div class="company-item">
               <each loop="item in [{'logo': './assets/images/logo_top_reference_04.png.webp', 'textAlt': 'AKBANK'}, {'logo': './assets/images/logo_top_reference_05.png.webp', 'textAlt': 'AKÇANSA'}]"><include src="./components/company-item.html" locals='{{item}}'></include></each>
