fix unit rem for SP view

--- a/practice-one/src/index.html
+++ b/practice-one/src/index.html
@@ -17,11 +17,11 @@
       <section class="section-top-keyvisual">
         <picture class="keyvisual-background">
           <source media="(min-width: 768px)" srcset="./assets/images/img_top_keyvisual.jpg.webp">
-          <img src="./assets/images/sp/img_top_keyvisual.jpg.webp" width="375" height="601" loading="eager" alt="Bilgi Teknolojilerinde 23 Yıllık Tecrübe">
+          <img src="./assets/images/sp/img_top_keyvisual.jpg.webp" loading="eager" alt="Bilgi Teknolojilerinde 23 Yıllık Tecrübe">
         </picture>
         <div class="wrapper">
           <div class="keyvisual-content">
-            <h1 class="keyvisual-title">Bilgi<br class="is-mobile"> Teknolojilerinde <br>23 Yıllık Tecrübe</h1>
+            <h1 class="keyvisual-title">Bilgi Teknolojilerinde 23 Yıllık Tecrübe</h1>
             <p class="keyvisual-detail">Müşterilerimizin yüksek kalite seviyelerini koruyabilmeleri<br class="is-mobile"> için farklı<br class="is-desktop"> sektörlerde tecrübe kazanmış uzman<br class="is-mobile"> kadrolarımızla Proje Yönetimi, İş <br class="is-desktop"> Analizi ve Test Yönetimi<br class="is-mobile">hizmetleri sunmaktayız.</p>
             <form action="POST" class="keyvisual-register">
               <input type="email" class="register-input" placeholder="Mail bültenimize kayıt ol">
