Fix button ,title and detail common

--- a/practice-one/src/index.html
+++ b/practice-one/src/index.html
@@ -25,9 +25,7 @@
             <p class="keyvisual-detail">Müşterilerimizin yüksek kalite seviyelerini koruyabilmeleri<br class="is-mobile"> için farklı<br class="is-desktop"> sektörlerde tecrübe kazanmış uzman<br class="is-mobile"> kadrolarımızla Proje Yönetimi, İş <br class="is-desktop"> Analizi ve Test Yönetimi<br class="is-mobile">hizmetleri sunmaktayız.</p>
             <form action="POST" class="keyvisual-register">
               <input type="email" class="register-input" placeholder="Mail bültenimize kayıt ol">
-              <button type="submit" onclick="alert('This feature is in development')" class="button-common-primary">
-                <span class="button-wrapper">Kayıt Ol</span>
-              </button>
+              <button type="submit" onclick="alert('This feature is in development')" class="button-primary">Kayıt Ol</button>
             </form>
           </div>
         </div>
@@ -35,12 +33,12 @@
       <section class="section-top-manage">
         <div class="wrapper">
           <div class="manage-heading">
-            <h2 class="title-common-primary">Kalite ve Süreç Yönetimi</h2>
-            <p class="detail-common-primary">Müşterilerimizin yüksek kalite seviyelerini koruyabilmeleri<br class="is-mobile"> için farklı sektörlerde tecrübe kazanmış uzman<br class="is-mobile"> kadrolarımızla Proje Yönetimi, İş Analizi ve Test Yönetimi hizmetleri sunmaktayız.</p>
+            <h2 class="title-primary">Kalite ve Süreç Yönetimi</h2>
+            <p class="detail-primary">Müşterilerimizin yüksek kalite seviyelerini koruyabilmeleri<br class="is-mobile"> için farklı sektörlerde tecrübe kazanmış uzman<br class="is-mobile"> kadrolarımızla Proje Yönetimi, İş Analizi ve Test Yönetimi hizmetleri sunmaktayız.</p>
           </div>
           <ul class="manage-list">
             <each loop="item in [{'image': './assets/icons/icon_manage_01.svg', 'title': 'Döküman Analizi'}, {'image': './assets/icons/icon_manage_02.svg', 'title': 'Kabul ve Değerlendirme'}, {'image': './assets/icons/icon_manage_03.svg', 'title': 'İş Kuralları Analizi'}, {'image': './assets/icons/icon_manage_04.svg', 'title': 'Akış Diyagramları'}, {'image': './assets/icons/icon_manage_05.svg', 'title': 'Paydaş Analizi'}, {'image': './assets/icons/icon_manage_06.svg', 'title': 'Prototipleme'}]">
-              <include src="./components/manage-item.html"> {{item}} </include>
+              <include src="./components/manage-item.html">{{item}}</include>
             </each>
           </ul>
         </div>
@@ -48,8 +46,8 @@
       <section class="section-top-provide">
         <div class="wrapper">
           <div class="provide-heading">
-            <h2 class="title-common-primary">Test Yönetimiyle Neler Sağlıyoruz?</h2>
-            <p class="detail-common-primary">IoT Destekli Çözümler</p>
+            <h2 class="title-primary">Test Yönetimiyle Neler Sağlıyoruz?</h2>
+            <p class="detail-primary">IoT Destekli Çözümler</p>
           </div>
           <ul class="provide-list">
             <li><p class="provide-detail">Yazılım Kalitesini<br> Arttırıyoruz</p></li>
@@ -62,28 +60,30 @@
       <section class="section-top-info">
         <div class="wrapper">
           <each loop="item in [{'image': './assets/images/img_top_info_01.jpg.webp', 'title': 'Kalite ve Süreç Yönetimi', 'detail': 'Deneyimli kadromuz; birçok farklı sektörden deneyimli, PMP® sertifikasına sahip, uzman proje yöneticilerinden oluşmaktadır. Projelerinizin yönetimine destek olmak, zayıf olduğunu düşündüğünüz alanları güçlendirmek, uluslararası geçerliliği olan PMI® metodolojisini şirketinizde uygulamak ve geliştirmek için yanınızdayız.'}, {'image': './assets/images/img_top_info_02.jpg.webp', 'title': 'Test Yönetimi ve Analizi', 'detail': 'Danışmanlığını yürüttüğümüz projelerde yazılım hatalarını önlemek amacıyla gerçekleştirdiğimiz testleri her proje aşamasında manuel ya da test otomasyonu ile dikkatle uygulamaktayız. Deneyimli test ekibimiz, kurumlara yüksek kalitede yazılım testleri hizmeti ile baştan sona güvenli, kaliteli ve tatmin edici bir müşteri deneyimi sunmaktadır.'}]">
-            <include src="./components/info-blog.html" locals='{{item}}'></include>
+            <include src="./components/info-blog.html">{{item}}</include>
           </each>
           </include>
         </div>
       </section>
       <section class="section-top-reference">
         <div class="wrapper">
-          <h2 class="title-common-primary">Referanslarımız</h2>
-          <p class="detail-common-primary">Bize güvenen ve beraber çalıştığımız iş ortaklarımız</p>
+          <h2 class="title-primary">Referanslarımız</h2>
+          <p class="detail-primary">Bize güvenen ve beraber çalıştığımız iş ortaklarımız</p>
           <div class="reference-company">
             <div class="company-item">
-              <each loop="item in [{'logo': './assets/images/logo_top_reference_01.png.webp', 'textAlt': 'BORUSAN'}]"><include src="./components/company-item.html" locals='{{item}}'></include></each>
-            </div>
-            <div class="company-item">
-              <each loop="item in [{'logo': './assets/images/logo_top_reference_02.png.webp', 'textAlt': 'İstanbul Bilgi Üniversitesi LAUREATE INTERNATIONAL UNIVERSITIES'}, {'logo': './assets/images/logo_top_reference_03.png.webp', 'textAlt': 'book my show'}]">
-                <include src="./components/company-item.html">
-                  {{item}}
-                </include>
+              <each loop="item in [{'logo': './assets/images/logo_top_reference_01.png.webp', 'textAlt': 'BORUSAN'}]">
+                <include src="./components/company-item.html">{{item}}</include>
               </each>
             </div>
             <div class="company-item">
-              <each loop="item in [{'logo': './assets/images/logo_top_reference_04.png.webp', 'textAlt': 'AKBANK'}, {'logo': './assets/images/logo_top_reference_05.png.webp', 'textAlt': 'AKÇANSA'}]"><include src="./components/company-item.html" locals='{{item}}'></include></each>
+              <each loop="item in [{'logo': './assets/images/logo_top_reference_02.png.webp', 'textAlt': 'İstanbul Bilgi Üniversitesi LAUREATE INTERNATIONAL UNIVERSITIES'}, {'logo': './assets/images/logo_top_reference_03.png.webp', 'textAlt': 'book my show'}]">
+                <include src="./components/company-item.html">{{item}}</include>
+              </each>
+            </div>
+            <div class="company-item">
+              <each loop="item in [{'logo': './assets/images/logo_top_reference_04.png.webp', 'textAlt': 'AKBANK'}, {'logo': './assets/images/logo_top_reference_05.png.webp', 'textAlt': 'AKÇANSA'}]">
+                <include src="./components/company-item.html">{{item}}</include>
+              </each>
               <div class="company-wrapper is-link">
                 <a href="#">
                   <figure class="company-logo">
@@ -93,21 +93,23 @@
               </div>
             </div>
             <div class="company-item is-desktop">
-              <each loop="item in [{'logo': './assets/images/logo_top_reference_07.png.webp', 'textAlt': 'aktaş'}, {'logo': './assets/images/logo_top_reference_08.png.webp', 'textAlt': 'OLA'}]"><include src="./components/company-item.html" locals='{{item}}'></include></each>
+              <each loop="item in [{'logo': './assets/images/logo_top_reference_07.png.webp', 'textAlt': 'aktaş'}, {'logo': './assets/images/logo_top_reference_08.png.webp', 'textAlt': 'OLA'}]">
+                <include src="./components/company-item.html">{{item}}</include>
+              </each>
             </div>
             <div class="company-item is-desktop">
-              <each loop="item in [{'logo': './assets/images/logo_top_reference_09.png.webp', 'textAlt': 'amazon'}]"><include src="./components/company-item.html" locals='{{item}}'></include></each>
+              <each loop="item in [{'logo': './assets/images/logo_top_reference_09.png.webp', 'textAlt': 'amazon'}]">
+                <include src="./components/company-item.html">{{item}}</include>
+              </each>
             </div>
           </div>
         </div>
       </section>
       <section class="section-top-contact">
         <div class="wrapper">
-          <h2 class="title-common-primary">Bize Ulaşın</h2>
-          <p class="detail-common-primary">Çözüm, hizmet ve ürünlerimiz hakkında detaylı bilgi için bizimle irtibata geçin.</p>
-          <a href="#" class="button-common-primary">
-            <span class="button-wrapper">Bize Ulaşın</span>
-          </a>
+          <h2 class="title-primary">Bize Ulaşın</h2>
+          <p class="detail-primary">Çözüm, hizmet ve ürünlerimiz hakkında detaylı bilgi için bizimle irtibata geçin.</p>
+          <a href="#" class="button-primary">Bize Ulaşın</a>
         </div>
       </section>
     </main>
