--- a/practice-one/src/index.html
+++ b/practice-one/src/index.html
@@ -22,7 +22,7 @@
         <div class="wrapper">
           <div class="keyvisual-content">
             <h1 class="keyvisual-title">Bilgi Teknolojilerinde 23 Yıllık Tecrübe</h1>
-            <p class="keyvisual-detail">Müşterilerimizin yüksek kalite seviyelerini koruyabilmeleri<br class="is-mobile"> için farklı<br class="is-desktop"> sektörlerde tecrübe kazanmış uzman<br class="is-mobile"> kadrolarımızla Proje Yönetimi, İş <br class="is-desktop"> Analizi ve Test Yönetimi<br class="is-mobile">hizmetleri sunmaktayız.</p>
+            <p class="keyvisual-detail">Müşterilerimizin yüksek kalite seviyelerini koruyabilmeleri için farklı sektörlerde tecrübe kazanmış uzman kadrolarımızla Proje Yönetimi, İş Analizi ve Test Yönetimihizmetleri sunmaktayız.</p>
             <form action="POST" class="keyvisual-register">
               <input type="email" class="register-input" placeholder="Mail bültenimize kayıt ol">
               <button type="submit" onclick="alert('This feature is in development')" class="button-primary">Kayıt Ol</button>
@@ -34,7 +34,7 @@
         <div class="wrapper">
           <div class="manage-heading">
             <h2 class="title-primary">Kalite ve Süreç Yönetimi</h2>
-            <p class="detail-primary">Müşterilerimizin yüksek kalite seviyelerini koruyabilmeleri<br class="is-mobile"> için farklı sektörlerde tecrübe kazanmış uzman<br class="is-mobile"> kadrolarımızla Proje Yönetimi, İş Analizi ve Test Yönetimi hizmetleri sunmaktayız.</p>
+            <p class="detail-primary">Müşterilerimizin yüksek kalite seviyelerini koruyabilmeleri için farklı sektörlerde tecrübe kazanmış uzman kadrolarımızla Proje Yönetimi, İş Analizi ve Test Yönetimi hizmetleri sunmaktayız.</p>
           </div>
           <ul class="manage-list">
             <each loop="item in [{'image': './assets/icons/icon_manage_01.svg', 'title': 'Döküman Analizi'}, {'image': './assets/icons/icon_manage_02.svg', 'title': 'Kabul ve Değerlendirme'}, {'image': './assets/icons/icon_manage_03.svg', 'title': 'İş Kuralları Analizi'}, {'image': './assets/icons/icon_manage_04.svg', 'title': 'Akış Diyagramları'}, {'image': './assets/icons/icon_manage_05.svg', 'title': 'Paydaş Analizi'}, {'image': './assets/icons/icon_manage_06.svg', 'title': 'Prototipleme'}]">
@@ -50,10 +50,10 @@
             <p class="detail-primary">IoT Destekli Çözümler</p>
           </div>
           <ul class="provide-list">
-            <li><p class="provide-detail">Yazılım Kalitesini<br> Arttırıyoruz</p></li>
-            <li><p class="provide-detail">Olası Hataları<br> Önceden Belirliyoruz</p></li>
-            <li><p class="provide-detail">Oluşabilecek Riskleri<br> Önlüyoruz</p></li>
-            <li><p class="provide-detail">Zaman ve Maliyetten<br> Tasarruf Sağlıyoruz</p></li>
+            <li><p class="provide-detail">Yazılım Kalitesini Arttırıyoruz</p></li>
+            <li><p class="provide-detail">Olası Hataları Önceden Belirliyoruz</p></li>
+            <li><p class="provide-detail">Oluşabilecek Riskleri Önlüyoruz</p></li>
+            <li><p class="provide-detail">Zaman ve Maliyetten Tasarruf Sağlıyoruz</p></li>
           </ul>
         </div>
       </section>
