--- a/practice-one/src/index.html
+++ b/practice-one/src/index.html
@@ -6,6 +6,8 @@
   <meta name="title" content="Bilgi Teknolojilerinde 23 Yıllık Tecrübe">
   <meta name="description"
     content="Müşterilerimizin yüksek kalite seviyelerini koruyabilmeleri için farklı sektörlerde tecrübe kazanmış uzman kadrolarımızla Proje Yönetimi, İş Analizi ve Test Yönetimi hizmetleri sunmaktayız.">
+  <meta name="keywords" content="HTML, CSS, Javascript">
+  <meta name="author" content="Thang Ngo">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/src/css/main.css" />
   <title>Bilgi Teknolojilerinde 23 Yıllık Tecrübe</title>
